<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BedtimeActivity">

    <TextView
        android:id="@+id/bedtimeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/main_sleepBtnLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/timeTypeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/sleepTimeRadio"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bedtimeLbl">

        <RadioButton
            android:id="@+id/sleepTimeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time" />

        <RadioButton
            android:id="@+id/wakeupTimeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wakeup_time" />
    </RadioGroup>

    <TextView
        android:id="@+id/infoText1Lbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bedtime_haveto1"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeTypeRadioGroup" />

    <LinearLayout
        android:id="@+id/timePickerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText1Lbl">

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:descendantFocusability="blocksDescendants" />

        <TextView
            android:id="@+id/timeDivider"
            android:layout_width="10sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=":" />

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText2Lbl">

        <TextView
            android:id="@+id/timeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3:00 PM"
            android:textColor="@android:color/holo_red_light"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/timeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4:30 PM"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/timeText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6:00 PM"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/infoText2Lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/bedtime_haveto2"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>